Thu Aug 22 10:44:52 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- workaround for set autocommit option
	* src/tds/convert.c:
	- avoiding writing to stderr, use tdsdump_log

Wed Aug 21 23:28:58 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* src/apps/freebcp.c	better diagnostics and -v support
	* src/tds/asprintf.c	PD version of function for systems that lack it.
	* configure.in		support vasprintf test, fix '==' error in thread checking
	* src/dblib/dblib.c	use vasprintf in dbfcmd
	* src/tds/Makefile.am	added asprintf.c to list of sources
	* src/tds/config.c	allow :port to describe port as part of servername.  
	
Wed Aug 21 21:42:54 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- convert from text using char conversions
	- return just fail converting from ntext avoiding crashes
	- do not warning on missed conversion if conversion impossible
	- added many TODO for missed conversion
	- return TDS_FAIL converting from char to binary if wrong syntax
	- add conversion from bit to binary
	- fixed conversion from money to char in Bill code 
	  (commented but not surely)
	- added conversion from money to money4

Wed Aug 21 20:31:57 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* configure.in:
	- option to enable thread safety

Wed Aug 21 14:38:54 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c src/tds/convert.c src/tds/login.c:
	* src/tds/numeric.c src/tds/token.c src/tds/unittests/t0008.c:
	- make g__numeric_bytes_per_prec const solving problem
	- connecting to both Sybase and mssql at the same time

Wed Aug 21 14:00:23 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/t0007.c src/ctlib/unittests/Makefile.am:
	* src/ctlib/unittests/t0003.c:
	- test for string length
	* src/ctlib/ct.c:
	- do not return garbage data on string
	* src/tds/token.c:
	- fixed set of cur_row_size for TDS_NUMERIC data
