@@ -1,3 +1,8 @@
+Thu Aug 22 17:35:34 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
+	* src/dblib/bcp.c:
+	- fix error that cause core dump in Linux, errno is strangely
+	  defined in Linux, do not use for variable name
+
 Thu Aug 22 10:44:52 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/odbc.c:
 	- workaround for set autocommit option
